# flux-python

./: .gitignore  LLNL.md  MANIFEST.in  README.md  pixi.toml  pyproject.toml  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: GOVERNANCE.md
.github/deprecated/: build-legacy-wheels.yaml  build-legacy.yaml  install-mamba.sh  test-build.yaml
.github/deprecated/scripts/: build-wheel.sh
.github/scripts/: build-bindings.sh  check_releases.py  requirements-dev.txt  setup.sh
.github/workflows/: build-legacy-wheels.yaml  build-legacy.yaml  build-manual.yaml  build-release.yaml  build.yaml  test-build.yaml
docker/: Dockerfile  build-wheel.sh  build-wheels.sh  install-mamba.sh  pre-build.sh
script/: install-flux-python.sh
src/: _core_build.py  _core_clean.h  _core_preproc.h  _hostlist_build.py  _hostlist_clean.h  _hostlist_preproc.h  _idset_build.py  _idset_clean.h  _idset_preproc.h  _rlist_build.py  _rlist_clean.h  _rlist_preproc.h  _security_build.py  _security_clean.h  _security_preproc.h
tests/: submit_job.py
